<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">PIRO</string>

    <string name="menu_settings">Podešavanja</string>
    <string name="menu_about">O aplikaciji</string>

    <string name="ledCentar">C</string>
    <string name="ledDesno">D</string>
    <string name="ledLevo">L</string>
    <string name="pc">R</string>

    <string name="city" translatable="false">N/A</string>
    <string name="day" translatable="false">N/A</string>

    <string name="currentTemperature" translatable="false">N/A</string>
    <string name="currentTemperatureDesc">Trenutni uslovi</string>
    <string name="dailyTemperatureDesc">Dnevni uslovi</string>
    <string name="currentConditions" translatable="false">N/A</string>
    <string name="uv" translatable="false">N/A</string>
    <string name="weatherVisibility">Vidljivost</string>
    <string name="visibility" translatable="false">N/A</string>
    <string name="weatherRealFeel">Subjektivni osećaj</string>
    <string name="feelsLike" translatable="false">N/A</string>
    <string name="weatherPrecipitation">Mogućnost padavina</string>
    <string name="precipitation" translatable="false">N/A</string>
    <string name="dailyMax" translatable="false">N/A</string>
    <string name="dailyMin" translatable="false">N/A</string>
    <string name="dailyConditions" translatable="false">N/A</string>

    <string name="thermalTemp" translatable="false">N/A</string>
    <string name="thermalMode" translatable="false">N/A</string>
    <string name="thermalIncrement" translatable="false">+</string>
    <string name="thermalDecrement" translatable="false">-</string>
    <string name="thermalOff">Isklj.</string>
    <string name="modeAuto">Autonomni režim</string>
    <string name="modeManual">Ručni režim</string>
    <string name="modeDay">Dnevna temperatura</string>
    <string name="modeNight">Noćna temperatura</string>
    <string name="modeFrost">Temperatura održavanja</string>

    <string name="systemUptime">Operativno vreme:</string>
    <string name="systemTemp">Temperatura servera:</string>
    <string name="systemLoad">Prosečno opterećenje servera:</string>
    <string name="systemUptimeToday">Server je pokrenut danas.</string>

    <!-- Format temperature -->
    <string name="format_temp" translatable="false"><xliff:g id="temp">%d</xliff:g>°</string>
    <string name="format_daily_temp" translatable="false"><xliff:g id="high">%d</xliff:g>° / <xliff:g id="low">%d</xliff:g>°</string>
    <string name="format_temp_f" translatable="false"><xliff:g id="temp">%.1f</xliff:g>°</string>
	<string name="format_temp_c" translatable="false"><xliff:g id="temp">%d</xliff:g>°C</string>
    <string name="format_percent" translatable="false"><xliff:g id="percent">%d</xliff:g>%%</string>
	
    <!-- Vrednost koja se prikazuje u slučaju neuspešnog učitavanja podataka -->
    <string name="not_available" translatable="false">--</string>

    <!-- Ključevi za vrednosti koje se čuvaju u memoriji -->
    <string name="data_relay_led_center_key" translatable="false">data_relay_led_center</string>
    <string name="data_relay_led_right_key" translatable="false">data_relay_led_right</string>
    <string name="data_relay_led_left_key" translatable="false">data_relay_led_left</string>
    <string name="data_relay_pc_key" translatable="false">data_relay_pc</string>
    <string name="data_heater_status_key" translatable="false">data_heater_status</string>
    <string name="data_heater_temp_key" translatable="false">data_heater_temp</string>
    <string name="data_heater_mode_key" translatable="false">data_heater_mode</string>
    <string name="data_weather_city_key" translatable="false">data_weather_city</string>
    <string name="data_weather_current_temp_key" translatable="false">data_weather_current_temp</string>
    <string name="data_weather_current_conditions_key" translatable="false">data_weather_current_condition</string>
    <string name="data_weather_current_icon_key" translatable="false">data_weather_current_icon</string>
    <string name="data_weather_current_precipitation_key" translatable="false">data_weather_current_precipitation</string>
    <string name="data_weather_current_visibility_key" translatable="false">data_weather_current_visibility</string>
    <string name="data_weather_current_feels_like_key" translatable="false">data_weather_current_feels_like</string>
    <string name="data_weather_current_uv_key" translatable="false">data_weather_current_uv</string>
    <string name="data_weather_day_key" translatable="false">data_weather_day</string>
    <string name="data_weather_daily_conditions_key" translatable="false">data_weather_daily_conditions</string>
    <string name="data_weather_daily_high_key" translatable="false">data_weather_daily_high</string>
    <string name="data_weather_daily_low_key" translatable="false">data_weather_daily_low</string>
    <string name="data_weather_daily_icon_key" translatable="false">data_weather_daily_icon</string>
    <string name="data_system_uptime_key" translatable="false">data_system_uptime</string>
    <string name="data_system_temp_key" translatable="false">data_system_temp</string>
    <string name="data_system_load_key" translatable="false">data_system_load</string>

    <string name="error_failed_to_load">Nije moguće povezati se na PIRO server</string>

</resources>
