<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="#3c4e57"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="155dp">

            <TextView
                android:id="@+id/city"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/currentConditions"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/currentConditions"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/currentTemperature"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/currentTemperature"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/currentTemperatureImg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/currentTemperatureDesc"
                android:src="@drawable/cloudy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/weatherRealFeel"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="1dp"
                        android:contentDescription="@string/weatherRealFeel"
                        android:src="@drawable/weather_realfeel" />

                    <TextView
                        android:id="@+id/feelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/weatherRealFeel"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/feelsLike"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/weatherVisibility"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/weatherVisibility"
                        android:src="@drawable/weather_visibility" />

                    <TextView
                        android:id="@+id/visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/weatherVisibility"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/visibility"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/weatherPrecipitation"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/weatherPrecipitation"
                        android:src="@drawable/weather_precipitation" />

                    <TextView
                        android:id="@+id/precipitation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/weatherPrecipitation"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/precipitation"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        card_view:cardBackgroundColor="#616161"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageView
                android:id="@+id/dailyTemperatureImg"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/dailyTemperatureDesc"
                android:src="@drawable/cloudy" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/day"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/dailyConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dailyConditions"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dailyMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif"
                    android:text="@string/dailyMax"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/dailyMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dailyMin"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>